Resolve "Refactor realm values"